# GhostNode

./: .gitignore  NOTICE  PRIVACY.md  README.md  flake.nix  treefmt.toml
GhostNode.xcodeproj/: project.pbxproj
GhostNode.xcodeproj/xcshareddata/xcschemes/: GhostNode.xcscheme
GhostNode/App/: ContentView.swift  GhostNodeApp.swift
GhostNode/AppIcon.icon/: icon.json
GhostNode/Assets.xcassets/GhostIcon.imageset/: Contents.json
GhostNode/OCR/Models/: OCRMode.swift  OCRModels.swift  OCRResult+Transform.swift
GhostNode/OCR/Processing/: DocumentOCR.swift  ImageBuffer.swift  OCRCoordinateMapping.swift  OCRJSONEncoder.swift  OCROverlayService.swift  OCRProcessor.swift  PageOCRStream.swift  PageRenderer.swift  RecognitionLanguages.swift  URL+Documents.swift  URL+Temp.swift
GhostNode/Resources/: GhostNode.entitlements  Info.plist  Localizable.xcstrings
GhostNode/Server/: ActiveJobs.swift  HTTPRequest+BufferedBody.swift  HTTPResponse+Output.swift  HTTPServerHost.swift  NetworkInterfaces.swift
GhostNode/Server/Routes/: OCRRoute.swift
GhostNode/Shared/: Binding+Presenting.swift  Data+ContentType.swift  Logger+Categories.swift
GhostNode/UI/: ScanFlowView.swift  ScanFlowViewModel.swift  ServerView.swift
GhostNode/UI/Components/: About.swift  DocumentScannerView.swift  (+10 more)
GhostNodeShare/: GhostNodeShare.entitlements  Info.plist  ShareViewController.swift
GhostNodeShareMac/: GhostNodeShareMac.entitlements  Info.plist  ShareViewController.swift
paperless-plugin/: README.md  pyproject.toml
paperless-plugin/paperless_ghostnode/: apps.py  parsers.py  signals.py
(+1 files in other folders)
