[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperless-ghostnode"
version = "0.1.0"
description = "Paperless-ngx parser that routes OCR through GhostNode instead of Tesseract"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

[project.urls]
Homepage = "https://github.com/sevenautumns/GhostNode"
